# learn2code_template

./: .clang-format  .clang-tidy  .gitpod.dockerfile  .gitpod.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
C/: a.out  basics  basics.c  calc.c  grades-average.c  pointer.c  student_struct.c
C++/: Untericht_2.cpp  Unterricht_1.cpp
CMakeLists/: add.c  main.c  pic.c  run_cmake.sh
Neuer_Ordner/: testfile
Schleifen/: project.c  trial.c  while.c
cProgramm/: basics  basics.c
new/: basics  basics.c
sw-pm/: conrad.cpp
